--- a/src/variables/reset/_index.scss
+++ b/src/variables/reset/_index.scss
@@ -5,6 +5,7 @@ $hu-reset-html-color: null !default;
 $hu-reset-html-font-family: sans-serif !default;
 $hu-reset-html-font-size: $hu-f-rem-context !default;
 $hu-reset-html-font-smoothing: true !default;
+$hu-reset-html-line-height: 1.25 !default;
 $hu-reset-html-overflow-y: null !default;
 $hu-reset-img-responsive: false !default;
 $hu-reset-input-placeholder-color: #767676 !default;
