--- a/src/functions/_hu-shade.scss
+++ b/src/functions/_hu-shade.scss
@@ -1,3 +1,3 @@
 @function hu-shade($color, $percentage) {
-  @return mix(#000, $color, $percentage);
+  @return scale-color($color, $lightness: $percentage * -1);
 }
