--- a/src/functions/_hu-tint.scss
+++ b/src/functions/_hu-tint.scss
@@ -1,3 +1,3 @@
 @function hu-tint($color, $percentage) {
-  @return mix(#fff, $color, $percentage);
+  @return scale-color($color, $lightness: $percentage);
 }
