Update palette: lighter 0s, more consistent, vibrant orange & yellow

--- a/src/variables/global/_hu-colors.scss
+++ b/src/variables/global/_hu-colors.scss
@@ -10,106 +10,106 @@ $hu-colors-keywords: (
 $hu-colors: hu-append((
   "neutral": (
     0: #ffffff,
-    100: #d5d5d5,
-    200: #c0c0c0,
-    300: #acacac,
+    100: #e1e1e1,
+    200: #c8c8c8,
+    300: #b1b1b1,
     400: #989898,
     500: #858585,
-    600: #737373,
+    600: #747474,
     700: #595959,
     800: #414141,
     900: #2b2b2b,
-    1000: #161616,
+    1000: #131313,
   ),
   "red": (
-    0: #fae9e8,
-    100: #f5d6d2,
-    200: #f1aca3,
-    300: #eb857a,
-    400: #e56156,
+    0: #fdf2f1,
+    100: #f7cfcd,
+    200: #f0a9a4,
+    300: #ea847e,
+    400: #e35e55,
     500: #de3f35,
-    600: #ce2922,
-    700: #a2221d,
-    800: #7b1b18,
-    900: #541513,
-    1000: #2f0f0f,
+    600: #ce2c22,
+    700: #9e221a,
+    800: #741913,
+    900: #4c100c,
+    1000: #1f0705,
   ),
   "orange": (
-    0: #faebe8,
-    100: #f5e0d2,
-    200: #f1c2a3,
-    300: #eba57a,
-    400: #e58a56,
-    500: #de7035,
-    600: #ce5a22,
-    700: #a2481d,
-    800: #7b3718,
-    900: #542813,
-    1000: #2f180f,
+    0: #fef7f2,
+    100: #fde2d2,
+    200: #fbcaad,
+    300: #f9b38b,
+    400: #f79c66,
+    500: #f58949,
+    600: #f37022,
+    700: #ca520b,
+    800: #943c08,
+    900: #602705,
+    1000: #271002,
   ),
   "yellow": (
-    0: #f7f3de,
-    100: #f0eabf,
-    200: #ece093,
-    300: #e6d36d,
-    400: #dfc64b,
-    500: #d8b82d,
-    600: #bf9f24,
-    700: #977e1e,
-    800: #725f19,
-    900: #4e4113,
-    1000: #2c250f,
+    0: #fefaeb,
+    100: #fcf2ce,
+    200: #fae8a6,
+    300: #f8de80,
+    400: #f6d359,
+    500: #f4cb39,
+    600: #f2c114,
+    700: #bf970b,
+    800: #8c6f08,
+    900: #5b4805,
+    1000: #251d02,
   ),
   "green": (
-    0: #def7e9,
-    100: #bff0d4,
-    200: #93ecb8,
-    300: #6de69e,
-    400: #4bdf85,
+    0: #f0fcf5,
+    100: #cbf5da,
+    200: #a1edbd,
+    300: #79e6a1,
+    400: #4fde84,
     500: #2dd86c,
-    600: #24bf5a,
-    700: #1e9748,
-    800: #197237,
-    900: #134e27,
-    1000: #0f2c18,
+    600: #24c05d,
+    700: #1b9348,
+    800: #146c34,
+    900: #0d4622,
+    1000: #051d0e,
   ),
   "blue": (
-    0: #deebf7,
-    100: #bfd8f0,
-    200: #93c0ec,
-    300: #6dade6,
-    400: #4b9bdf,
+    0: #f0f7fc,
+    100: #cbe3f5,
+    200: #a1cced,
+    300: #79b6e6,
+    400: #4f9fde,
     500: #2d8dd8,
-    600: #247fbf,
-    700: #1e6497,
-    800: #194d72,
-    900: #13364e,
-    1000: #0f212c,
+    600: #247bc0,
+    700: #1b5f93,
+    800: #14456c,
+    900: #0d2d46,
+    1000: #05121d,
   ),
   "indigo": (
-    0: #e5def7,
-    100: #cfbff0,
-    200: #af93ec,
-    300: #906de6,
-    400: #754bdf,
+    0: #f3f0fc,
+    100: #d6cbf5,
+    200: #b5a1ed,
+    300: #9579e6,
+    400: #744fde,
     500: #5a2dd8,
-    600: #4924bf,
-    700: #3b1e97,
-    800: #2e1972,
-    900: #21134e,
-    1000: #140f2c,
+    600: #4d24c0,
+    700: #3b1b93,
+    800: #2b146c,
+    900: #1c0d46,
+    1000: #0b051d,
   ),
   "violet": (
-    0: #f7def3,
-    100: #f0bfe8,
-    200: #ec93de,
-    300: #e66dd5,
-    400: #df4bcd,
+    0: #fcf0fb,
+    100: #f5cbf1,
+    200: #eda1e6,
+    300: #e679db,
+    400: #de4fd0,
     500: #d82dc7,
-    600: #bf24b3,
-    700: #971e8d,
-    800: #72196b,
-    900: #4e134a,
-    1000: #2c0f2b,
+    600: #c024b0,
+    700: #931b88,
+    800: #6c1463,
+    900: #460d41,
+    1000: #1d051a,
   ),
 ), $hu-colors-keywords) !default;
