Add size (height & width) class. Fixes #14

--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -88,6 +88,7 @@
 @import "hu-rotate";
 @import "hu-scale";
 @import "hu-scroll-behavior";
+@import "hu-size";
 @import "hu-svg-fill-color";
 @import "hu-svg-fill-rule";
 @import "hu-svg-stroke-color";
