Add line-clamp class

--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -66,6 +66,7 @@
 @import "hu-justify-items";
 @import "hu-justify-self";
 @import "hu-letter-spacing";
+@import "hu-line-clamp";
 @import "hu-line-height";
 @import "hu-list-style";
 @import "hu-margin";
