--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -67,6 +67,7 @@
 @import "hu-justify-items";
 @import "hu-justify-self";
 @import "hu-letter-spacing";
+@import "hu-line-clamp";
 @import "hu-line-height";
 @import "hu-list-style";
 @import "hu-margin";
