add max-height and max-width to transition-property

--- a/src/variables/classes/_hu-transition-property.scss
+++ b/src/variables/classes/_hu-transition-property.scss
@@ -7,6 +7,8 @@ $hu-transition-property-types: (
   background-color,
   color,
   height,
+  max-height,
+  max-width,
   opacity,
   transform,
   visibility,
