--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -12,6 +12,7 @@
 @import "hu-animation-state";
 @import "hu-appearance";
 @import "hu-backface-visibility";
+@import "hu-background-blend-mode";
 @import "hu-background-color";
 @import "hu-background-image";
 @import "hu-background-position-x";
