--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -11,6 +11,7 @@
 @import "hu-animation-name";
 @import "hu-animation-state";
 @import "hu-appearance";
+@import 'hu-backdrop-filter';
 @import "hu-backface-visibility";
 @import "hu-background-color";
 @import "hu-background-image";
