--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -18,7 +18,6 @@
 @import "hu-background-position-y";
 @import "hu-background-repeat";
 @import "hu-background-size";
-@import "hu-blend-mode";
 @import "hu-border-collapse";
 @import "hu-border-color";
 @import "hu-border-radius";
@@ -75,6 +74,7 @@
 @import "hu-max-width";
 @import "hu-min-height";
 @import "hu-min-width";
+@import "hu-mix-blend-mode";
 @import "hu-momentum-scrolling";
 @import "hu-object-fit";
 @import "hu-opacity";
