Overlooked changing variable names.

--- a/src/classes/_hu-mix-blend-mode.scss
+++ b/src/classes/_hu-mix-blend-mode.scss
@@ -1,1 +1,1 @@
-@include hu-classes(($hu-blend-mode-alias: mix-blend-mode), $hu-blend-mode-modules, $hu-blend-mode-types);
+@include hu-classes(($hu-mix-blend-mode-alias: mix-blend-mode), $hu-mix-blend-mode-modules, $hu-mix-blend-mode-types);
