Remove 'base' module for mix-blend-mode

--- a/src/variables/classes/_hu-mix-blend-mode.scss
+++ b/src/variables/classes/_hu-mix-blend-mode.scss
@@ -1,6 +1,6 @@
 $hu-mix-blend-mode-alias: "" !default;
 
-$hu-mix-blend-mode-modules: (base) !default;
+$hu-mix-blend-mode-modules: () !default;
 
 $hu-mix-blend-mode-types: (
   color,
