Change blend-mode to mix-blend-mode to avoid confusion with backg… (#19)
* Change blend-mode to mix-blend-mode to avoid confusion with background-blend-mode

* Overlooked changing variable names.

* Update docs

* Fix incorrectly alphabetised content order

* Remove 'base' module for mix-blend-mode

* Add space. Also remove 'base' in docs to reflect recent change in code.

--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -20,7 +20,6 @@
 @import "hu-background-position-y";
 @import "hu-background-repeat";
 @import "hu-background-size";
-@import "hu-blend-mode";
 @import "hu-border-collapse";
 @import "hu-border-color";
 @import "hu-border-radius";
@@ -77,6 +76,7 @@
 @import "hu-max-width";
 @import "hu-min-height";
 @import "hu-min-width";
+@import "hu-mix-blend-mode";
 @import "hu-momentum-scrolling";
 @import "hu-object-fit";
 @import "hu-opacity";
