--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -20,7 +20,6 @@
 @import "hu-background-position-y";
 @import "hu-background-repeat";
 @import "hu-background-size";
-@import "hu-blend-mode";
 @import "hu-border-collapse";
 @import "hu-border-color";
 @import "hu-border-radius";
@@ -76,6 +75,7 @@
 @import "hu-max-width";
 @import "hu-min-height";
 @import "hu-min-width";
+@import "hu-mix-blend-mode";
 @import "hu-object-fit";
 @import "hu-opacity";
 @import "hu-order";
