Add resize class

--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -90,6 +90,7 @@
 @import "hu-pointer-events";
 @import "hu-pos";
 @import "hu-position";
+@import "hu-resize";
 @import "hu-rotate";
 @import "hu-scale";
 @import "hu-scroll-behavior";
