Added hyphens, overflow-wrap, word-break & word-wrapclasses

--- a/src/classes/_index.scss
+++ b/src/classes/_index.scss
@@ -63,6 +63,7 @@
 @import "hu-grid-template-columns";
 @import "hu-grid-template-rows";
 @import "hu-height";
+@import "hu-hyphens";
 @import "hu-justify-content";
 @import "hu-justify-items";
 @import "hu-justify-self";
@@ -81,6 +82,7 @@
 @import "hu-order";
 @import "hu-outline";
 @import "hu-overflow";
+@import "hu-overflow-wrap";
 @import "hu-overflow-x";
 @import "hu-overflow-y";
 @import "hu-overscroll-behavior";
@@ -116,6 +118,8 @@
 @import "hu-visibility";
 @import "hu-white-space";
 @import "hu-width";
+@import "hu-word-break";
+@import "hu-word-wrap";
 @import "hu-z-index";
 
 @import "hu-font-smoothing";
