--- a/src/variables/classes/_index.scss
+++ b/src/variables/classes/_index.scss
@@ -64,6 +64,7 @@
 @import "hu-grid-template-columns";
 @import "hu-grid-template-rows";
 @import "hu-height";
+@import "hu-hyphens";
 @import "hu-justify-content";
 @import "hu-justify-items";
 @import "hu-justify-self";
@@ -83,6 +84,7 @@
 @import "hu-order";
 @import "hu-outline";
 @import "hu-overflow";
+@import "hu-overflow-wrap";
 @import "hu-overflow-x";
 @import "hu-overflow-y";
 @import "hu-overscroll-behavior";
@@ -117,4 +119,6 @@
 @import "hu-visually-hidden";
 @import "hu-white-space";
 @import "hu-width";
+@import "hu-word-break";
+@import "hu-word-wrap";
 @import "hu-z-index";
