Fix animation-count. Set animation-count & easing modules base

--- a/src/variables/classes/_hu-animation-count.scss
+++ b/src/variables/classes/_hu-animation-count.scss
@@ -1,5 +1,7 @@
 $hu-animation-count-alias: animation-count !default;
 
-$hu-animation-count-modules: () !default;
+$hu-animation-count-modules: (base) !default;
 
-$hu-animation-count-types: () !default;
+$hu-animation-count-types: (
+  infinite,
+) !default;
