--- a/src/variables/classes/_hu-animation-easing.scss
+++ b/src/variables/classes/_hu-animation-easing.scss
@@ -1,6 +1,6 @@
 $hu-animation-easing-alias: animation-easing !default;
 
-$hu-animation-easing-modules: () !default;
+$hu-animation-easing-modules: (base) !default;
 
 $hu-animation-easing-types: (
   ease: ease,
