--- a/src/classes/_hu-animation-count.scss
+++ b/src/classes/_hu-animation-count.scss
@@ -1,1 +1,1 @@
-  @include hu-classes(($hu-animation-count-alias, animation-iteration-count), $hu-animation-count-modules, $hu-animation-count-types);
+@include hu-classes(($hu-animation-count-alias: animation-iteration-count), $hu-animation-count-modules, $hu-animation-count-types);
