Added and fixed linting with stylelint

--- a/src/classes/_hu-momentum-scrolling.scss
+++ b/src/classes/_hu-momentum-scrolling.scss
@@ -1,3 +1,3 @@
 @include hu-classes($hu-momentum-scrolling-alias, $hu-momentum-scrolling-modules) {
   -webkit-overflow-scrolling: touch #{hu-important()};
-};
+}
