--- a/src/variables/classes/_hu-max-width.scss
+++ b/src/variables/classes/_hu-max-width.scss
@@ -3,5 +3,5 @@ $hu-max-width-alias: "" !default;
 $hu-max-width-modules: (base, responsive) !default;
 
 $hu-max-width-types: (
-  100: 100%,
+  100%,
 ) !default;
