--- a/src/variables/classes/_hu-min-height.scss
+++ b/src/variables/classes/_hu-min-height.scss
@@ -3,8 +3,8 @@ $hu-min-height-alias: "" !default;
 $hu-min-height-modules: (base) !default;
 
 $hu-min-height-types: (
-  0: 0,
-  100: 100%,
-  100vh: 100vh,
-  none: none,
+  0,
+  100%,
+  100vh,
+  none,
 ) !default;
