--- a/src/variables/classes/_hu-translate-x.scss
+++ b/src/variables/classes/_hu-translate-x.scss
@@ -3,9 +3,9 @@ $hu-translate-x-alias: translate-x !default;
 $hu-translate-x-modules: (base) !default;
 
 $hu-translate-x-types: (
-  -100: -100%,
-  -50: -50%,
-  0: 0,
-  50: 50%,
-  100: 100%,
+  -100%,
+  -50%,
+  0,
+  50%,
+  100%,
 ) !default;
