--- a/src/variables/classes/_hu-width.scss
+++ b/src/variables/classes/_hu-width.scss
@@ -4,23 +4,23 @@ $hu-width-modules: (base, print, responsive) !default;
 
 $hu-width-types: (
   0: 0,
-  5: 5%,
-  10: 10%,
-  16: 16.66667%,
-  20: 20%,
-  25: 25%,
-  30: 30%,
-  33: 33.33333%,
-  40: 40%,
-  50: 50%,
-  60: 60%,
-  66: 66.66666%,
-  70: 70%,
-  75: 75%,
-  80: 80%,
-  83: 83.33333%,
-  90: 90%,
-  100: 100%,
+  5%: 5%,
+  10%: 10%,
+  16.6%: 16.66667%,
+  20%: 20%,
+  25%: 25%,
+  30%: 30%,
+  33.3%: 33.33333%,
+  40%: 40%,
+  50%: 50%,
+  60%: 60%,
+  66.6%: 66.66666%,
+  70%: 70%,
+  75%: 75%,
+  80%: 80%,
+  83.3%: 83.33333%,
+  90%: 90%,
+  100%: 100%,
   100vw: 100vw,
   auto: auto,
 ) !default;
