--- a/src/variables/classes/_hu-flex-basis.scss
+++ b/src/variables/classes/_hu-flex-basis.scss
@@ -1,5 +1,7 @@
 $hu-flex-basis-alias: "" !default;
 
-$hu-flex-basis-modules: () !default;
+$hu-flex-basis-modules: (base) !default;
 
-$hu-flex-basis-types: () !default;
+$hu-flex-basis-types: (
+  0,
+) !default;
