--- a/src/mixins/_hu-pseudo.scss
+++ b/src/mixins/_hu-pseudo.scss
@@ -48,6 +48,12 @@
         }
       }
 
+      @else if ($module == group-visited) {
+        .group:visited .group#{hu-escape-class-name(":visited")}__#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
+          @content;
+        }
+      }
+
       @else if ($module == group-focus) {
         #{$hu-focus-parent} .group#{$hu-focus-pseudo} .group#{hu-escape-class-name(":focus")}__#{$pseudo-class-name}--#{$class-name}#{$pseudo} {
           @content;
