--- a/src/variables/global/_hu-escape-class-name-types.scss
+++ b/src/variables/global/_hu-escape-class-name-types.scss
@@ -1,5 +1,5 @@
 // See https://mathiasbynens.be/notes/css-escapes
-// Use a custom Purgecss extractor: /[A-Za-z0-9-_&:@%\.<>\(\)\/]+/g
+// Use a custom Purgecss extractor: /[A-Za-z0-9-_&:@%\.<>\(\)\[\]\/]+/g
 $hu-escape-class-name-types: (
   ":",
   "&",
@@ -11,4 +11,6 @@ $hu-escape-class-name-types: (
   "/",
   "(",
   ")",
+  "[",
+  "]",
 ) !default;
