--- a/src/variables/classes/_hu-align-items.scss
+++ b/src/variables/classes/_hu-align-items.scss
@@ -4,6 +4,7 @@ $hu-align-items-modules: (base, responsive) !default;
 
 $hu-align-items-types: (
   auto,
+  baseline,
   center,
   end,
   flex-end,
