--- a/src/variables/global/_index.scss
+++ b/src/variables/global/_index.scss
@@ -5,6 +5,7 @@
 @import "hu-focus";
 @import "hu-media-queries";
 @import "hu-namespace";
+@import "hu-pseudo-prefix";
 @import "hu-spacing-scale";
 @import "hu-states";
 @import "hu-themes";
