support `display: flow-root`

--- a/src/variables/classes/_hu-display.scss
+++ b/src/variables/classes/_hu-display.scss
@@ -5,6 +5,7 @@ $hu-display-modules: (base, focus, hover, hocus, group-hocus, group-state, print
 $hu-display-types: (
   block,
   flex,
+  flow-root,
   grid,
   inline,
   inline-block,
