Update outline to be output at base module

--- a/src/variables/classes/_hu-outline.scss
+++ b/src/variables/classes/_hu-outline.scss
@@ -1,6 +1,6 @@
 $hu-outline-alias: "" !default;
 
-$hu-outline-modules: (focus, hocus) !default;
+$hu-outline-modules: (base, focus, hocus) !default;
 
 $hu-outline-types: (
   none,
