--- a/src/variables/reset/_index.scss
+++ b/src/variables/reset/_index.scss
@@ -6,7 +6,9 @@ $hu-reset-html-font-family: sans-serif !default;
 $hu-reset-html-font-size: $hu-f-rem-context !default;
 $hu-reset-html-font-smoothing: true !default;
 $hu-reset-html-line-height: 1.25 !default;
+$hu-reset-html-overflow-x: null !default;
 $hu-reset-html-overflow-y: null !default;
+$hu-reset-html-text-rendering: null !default;
 $hu-reset-img-responsive: false !default;
 $hu-reset-input-placeholder-color: #767676 !default;
 $hu-reset-remove-number-input-spinners: true !default;
