--- a/src/functions/_hu-strip-unit.scss
+++ b/src/functions/_hu-strip-unit.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @function hu-strip-unit($number) {
-  @return $number / ($number * 0 + 1);
+  @return math.div($number, $number * 0 + 1);
 }
